# charting-the-future

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: DEEP_RESEARCH_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_SUMMARY.md
memory-bank/: README.md  activeContext.md  phase1-chapter6-spec.md  phase2-chapter7-spec.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
research/: sources.md
research/summaries/: template_summary.md
sector-committee/: .env.example  Makefile  demo_deep_research.py  demo_portfolio_phase2.py
sector-committee/examples/: demo_phase1.py
sector-committee/notebooks/: README.md  chapter_06.ipynb  chapter_07.ipynb
sector-committee/sector_committee/: __init__.py  data_models.py  llm_models.py
sector-committee/sector_committee/portfolio/: __init__.py  config.py  constructor.py  models.py
sector-committee/sector_committee/portfolio/signals/: __init__.py  calibration.py
sector-committee/sector_committee/scoring/: __init__.py  agents.py  audit.py  ensemble.py  factory.py  llm_adapters.py  prompt_utilities.py  prompts.py  schema.py
sector-committee/tests/: PERFORMANCE_COMPARISON.md  README.md  __init__.py  conftest.py
sector-committee/tests/integration/: test_llm_adapters_integration.py  test_llm_models_integration.py  test_phase1_integration.py  test_phase1_optimized.py
sector-committee/tests/unit/: test_agents.py  test_data_models.py  test_llm_adapters.py  test_llm_models.py  test_portfolio_constructor.py  test_prompts.py  test_schema_validation.py
